March 14 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* charde.h: Bodypart color tweaks

March 14 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* bitmap.cpp: Added bool DrawSides parameter for bitmap::DrawPolygon

March 14 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Material colors added to humanoid bodyparts. All humanoids are now very ugly.
	  * Modified files:
	    * Human.pcx: renamed as Humanoid.pcx and converted to material colors by Kahvi
	    * object.cpp:
	      * ushort object::GetMaterialColor0() const added
	      * ushort object::GetMaterialColor1() const added
	      * ushort object::GetMaterialColor2() const added
	      * ushort object::GetMaterialColor3() const added
	      * Added argument for void object::UpdatePicture(bool RemoveOld), which determines whether old pic will be removed. The func now updates GraphicId based on the preceding functions.
	    * object.h:
	      * void object::ColorChangeSpeciality(uchar, bool) removed
	    * lterrain.h:
	      * void stairsdown::ColorChangeSpeciality(uchar, bool) removed
	      * ushort stairsdown::GetMaterialColor1() const added
	      * void stairsup::ColorChangeSpeciality(uchar, bool) removed
	      * ushort stairsup::GetMaterialColor1() const added
	    * itemde.cpp:
	      * void potion::ColorChangeSpeciality(uchar Index, bool EmptyMaterial) removed
	      * void bodypart::Save(outputfile& SaveFile) const modified so that Colors are saved
	      * void bodypart::Load(inputfile& SaveFile) const modified so that Colors are loaded
	      * void torso::Save(outputfile& SaveFile) const removed
	      * void torso::Load(inputfile& SaveFile) const removed
	    * itemde.h:
	      * torso divided into two childs classes: normaltorso and humanoidtorso
	      * void bodypart::SetColor(ushort Index, ushort What) added
	      * ushort xxx::GetMaterialColorxxx() const funcs added here and there
	    * igraph.h:
	      * humanoid is now raw type
	    * charde.cpp:
	      * All references to complexhumanoid removed