@@ -1,3 +1,8 @@
+March 15 2002 Timo Kiviluoto <sonor@phpoint.fi>
+
+	* charde.h: Bodypart color tweaks
+	* Humanoid.pcx: Material color tweaks by Kahvi
+
 March 14 2002 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* charde.h: Bodypart color tweaks
